# DRAM_FAULT_SIM

./: LICENSE
dram_error_analysis/: FITrate.csv  FITrate.ods  README.md  amd_base.py  conda-requirements.txt  dram_error_analysis.py  generate_conf.py  param_distribution.pkl  process_1.py  process_2(optional).py  process_3(optional).py  process_4.py  trouble_tickets.pkl  utils.py
dram_error_sim/: Bamboo.cc  Bamboo.hh  CE.csv  CMakeLists.txt  Config.cc  Config.hh  DUE.csv  DUO.cc  DUO.hh  DomainGroup.cc  DomainGroup.hh  DoxygenLayout.xml  ECC.cc  ECC.hh  Fault.cc  Fault.hh  FaultDomain.cc  FaultDomain.hh  FaultRateInfo.cc  FaultRateInfo.hh  FlipCorrection.cc  FlipCorrection.hh  Huawei.cc  Huawei.hh  LOT.cc  LOT.hh  MultiECC.cc  MultiECC.hh  README  README.md  REGB.cc  REGB.hh  SDC.csv  Scrubber.hh  Tester.cc  Tester.hh  VECC.cc  VECC.hh  Visualize_output.py  XED.cc  (+34 more)
